# nki-library

./: .editorconfig  .gitignore  GETTING_STARTED.md  Makefile  README.md  git_commit_guidance.md  pyproject.toml
src/nkilib_src/nkilib/: __init__.py
src/nkilib_src/nkilib/core/attention/: attention_bwd.py  attention_bwd_torch.py  attention_cte.py  attention_cte_torch.py  attention_tkg.py  attention_tkg_design_spec.md  attention_tkg_torch.py  attention_tkg_utils.py  gen_mask_tkg.py  gen_mask_tkg_design_spec.md  gen_mask_tkg_torch.py
src/nkilib_src/nkilib/core/cumsum/: __init__.py  cumsum.py  cumsum_torch.py
src/nkilib_src/nkilib/core/embeddings/: rope.py  rope_hf.py  rope_hf_torch.py  rope_torch.py
src/nkilib_src/nkilib/core/loss/: __init__.py  cross_entropy.py  cross_entropy_torch.py  validation.py
src/nkilib_src/nkilib/core/max/: cascaded_max.py  cascaded_max_torch.py  cascaded_max_utils.py
src/nkilib_src/nkilib/core/mlp/: mlp.py  mlp_parameters.py
src/nkilib_src/nkilib/core/moe/: __init__.py
src/nkilib_src/nkilib/core/moe_block/: moe_block_tkg.py  moe_block_tkg_torch.py  moe_block_tkg_utils.py
src/nkilib_src/nkilib/core/output_projection/: output_projection_tkg.py  output_projection_tkg_torch.py  output_projection_utils.py
src/nkilib_src/nkilib/core/qkv/: qkv.py  qkv_cte.py  qkv_cte_utils.py  qkv_tkg.py  qkv_tkg_mx_impl.py  qkv_tkg_mx_utils.py  qkv_tkg_torch.py
src/nkilib_src/nkilib/core/rmsnorm/: rmsnorm_quant.py  rmsnorm_quant_constants.py  rmsnorm_quant_tile_info.py
src/nkilib_src/nkilib/core/router_topk/: router_topk.py  router_topk_torch.py
src/nkilib_src/nkilib/core/subkernels/: find_nonzero_indices.py  find_nonzero_indices_torch.py  indexed_flatten_torch.py  layernorm_tkg.py  layernorm_torch.py  norm_tkg_utils.py  rmsnorm_mx_quantize_tkg.py  rmsnorm_tkg.py  rmsnorm_torch.py
src/nkilib_src/nkilib/core/topk/: __init__.py  rotational_topk.py  rotational_topk_utils.py  torch_ref.py
src/nkilib_src/nkilib/core/transformer/: transformer_tkg_torch.py
src/nkilib_src/nkilib/core/utils/: allocator.py  common_types.py  cross_partition_copy.py  interleave_copy.py  kernel_helpers.py  lnc_subscriptable.py  mx_torch_common.py  tensor_view.py  tiled_range.py  tp_broadcast.py  tree_logger.py
src/nkilib_src/nkilib/experimental/benchmark/: find_nonzero_indices.py  find_nonzero_indices_with_count.py
src/nkilib_src/nkilib/experimental/collectives/: __init__.py  fg_allgather.py  fgcc.py  sb2sb_allgather.py
src/nkilib_src/nkilib/experimental/conv/: conv1d.py  conv1d_torch.py  depthwise_conv1d.py
src/nkilib_src/nkilib/experimental/dynamic_shapes/: __init__.py  dynamic_elementwise_add.py  dynamic_elementwise_add_torch.py
src/nkilib_src/nkilib/experimental/loss/: __init__.py  cross_entropy.py  cross_entropy_torch.py  validation.py
src/nkilib_src/nkilib/experimental/mxfp_subkernels/: mxfp_load_utils.py
src/nkilib_src/nkilib/experimental/scan/: __init__.py  linear_scan.py  selective_scan.py
src/nkilib_src/nkilib/experimental/subkernels/: find_nonzero_indices.py  topk_reduce.py  topk_reduce_torch.py
src/nkilib_src/nkilib/experimental/transformer/: __init__.py  attention_block_tkg.py  attention_block_tkg_sharding.py  attention_block_tkg_sharding_design_spec.md  attention_block_tkg_torch.py  transformer_tkg.py  transformer_tkg_torch.py
src/nkilib_src/nkilib/version/: __init__.py
src/nkilib_standalone/nkilib/: __init__.py
src/nkilib_standalone/nkilib/core/attention/: attention_cte.py  attention_cte_torch.py  attention_tkg.py
src/nkilib_standalone/nkilib/core/embeddings/: __init__.py  rope.py
src/nkilib_standalone/nkilib/core/mlp/: mlp.py  mlp_parameters.py
src/nkilib_standalone/nkilib/core/output_projection/: output_projection_cte.py  output_projection_tkg.py  output_projection_utils.py
test/: README.md  __init__.py  conftest.py  pytest.ini
test/integration/nkilib/: __init__.py
test/integration/nkilib/utils/: __init__.py  comparators.py  dtype_helper.py  tensor_generators.py  test_kernel_common.py
test/unit/: __init__.py  test_always_pass.py  test_artifact_manager.py  test_common_dataclasses.py  test_core_lock_manager.py  test_coverage_parametrize.py  test_determinism_checker.py  test_experimental_subkernels_import.py  test_fast_marker_presence.py  test_feature_flag_helper.py  test_file_classifier.py  test_host_management.py  test_init_files_exist.py  test_kernel_helpers.py  test_kernel_tracer.py  test_license_headers.py  test_metadata_loader.py  test_metadata_presence.py  test_metrics_emitter.py  test_metrics_integration.py  test_new_test_file_guidelines.py  test_nkilib_bundled_simulation.py  test_nkilib_override.py  test_output_validator.py  test_param_extractor.py  test_profiler_utils.py  test_pytest_parametrize.py  test_qor_collector.py  test_random_seed_presence.py  test_ranged_test_harness_deduplication.py  test_relative_imports.py  test_ruff_format.py  test_s3_utils.py  test_sqs_emitter.py  test_tiled_range.py  test_unit_test_framework.py  test_validate_cpu_simulator.py
test/utils/: __init__.py  artifact_manager.py  chdir.py  cleanup_legacy_locks.sh  common_dataclasses.py  composite_emitter.py  core_lock_client.py  core_lock_manager.py  coverage_parametrized_tests.py  debug_utils.py  determinism_checker.py  exceptions.py  feature_flag_helper.py  host_management.py  kernel_tracer.py  metadata_loader.py  metrics_collector.py  metrics_emitter.py  mx_utils.py  output_validator.py  param_extractor.py  profiler_utils.py  pytest_parametrize.py  pytest_test_metadata.py  qor_collector.py  ranged_test_harness.py  resources.py  s3_utils.py  simulation_constants.py  simulation_setup.py  sqs_emitter.py  tensor_histogram.py  test_orchestrator.py  test_validation_utils.py  unit_test_framework.py  zoom_diff.py
(+173 files in other folders)
