[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nki_library"
dynamic = ["version"]
description = "NeuronKernelInterfaceLibrary"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["NKI", "Neuron", "Kernels", "High-Performance", "Hardware", "AWS", "Amazon"]
license = {text = "Apache-2.0"}
dependencies = [
    "neuronx-cc>=0.0.0a0",
    "neuronx-cc-stubs>=0.0.0a0",
    "nki>=0.0.0a0",
]


[project.optional-dependencies]
test = [
    "numpy",
    "pandas",
    "torch",
    "aws-embedded-metrics",
    "boto3",
    "fabric2",
    "filelock",
    "plotext",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-metadata",
    "pytest-html",
    "ruff==0.4.0",
    "pre-commit",
    "debugpy",
    "pytest-cov",
    "allpairspy"
]

[tool.setuptools]
zip-safe = true
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "nkilib_src.nkilib.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
# Remove test exclusion to bundle tests in wheel
# exclude = ["test"]

[tool.setuptools.package-data]
nkilib_src = ["py.typed"]

[tool.black]
line-length = 100

[tool.isort]
known_first_party = ["nkilib_src"]
profile = "black"
line_length = 100

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
pretty = true
ignore_missing_imports = true

[tool.flake8]
ignore = [
    "E203",
    "W503",
    "E501",
]
max-line-length = 120

[tool.ruff]
indent-width = 4
line-length = 120
extend-exclude = ["*model_config.py", "configuration/"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
docstring-code-format = false

[tool.ruff.lint]
# Enable linting rules
select = [
    "S101",  # assert detection
    "I",     # isort (import sorting)
    "F401",  # unused imports
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["I", "F401"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["S101"]
"**/test_*.py" = ["S101"]
"**/penguin.py" = ["S101"]
